# Spectre

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose-spectre.yaml  how_to_use.sh  requirements.txt  resultadoRsync.txt  setup.cfg  setup.py  spectre.py  spectreCNV.py  spectreCNVPopulation.py  trungplot.py  trungplot2.py
.github/workflows/: release.yaml
analysis/: analysis.py  cnv_metrics.py  coverage_stats.py
data/: grch37.mdr  grch37_blacklist_plus.bed  grch37_blacklist_spectre_refined.bed  grch38.mdr  grch38_blacklist_spectre.bed  grch38_y.txt
plots/: plot.py
spectre/: spectre  spectre.py  spectreCNV.py  spectreCNVPopulation.py
spectre/analysis/: analysis.py  breakpoint_analysis.py  call_cnv_AF.py  call_cnv_coverage.py  cnv_candidate.py  cnv_metrics.py  cnv_post_processing.py  coverage_stats.py  snv_analysis.py
spectre/classes/: cnv_candidate.py  loh_candidate.py
spectre/data/: grch37_blacklist_normal.bed  grch37_blacklist_spectre.bed  grch38_blacklist.bed
spectre/libs/unidip/: dip.py  unidip.py
spectre/plots/: plot.py
spectre/util/: OSUtil.py  cnv_id.py  dataAnalyzer.py  logger.py  mosdepthReader.py  outputWriter.py  timing_dev.py  vcf_parser.py
spectre/util/metadata/: metadataCollector.py
util/: mosdepthReader.py  vcf_parser.py
