[project]
name = "spectre-cnv"
version = "0.2.1"
author = Philippe Sanio
author_email = philippe.sanio@gmail.com
description = "Long read copy number variation (CNV) caller"
long_description = file: README.md
long_description_content_type = text/markdown
readme = "README.md"
requires-python = ">=3.10"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
install_requires =
    pysam >=0.22.0
    numpy >=1.24.3
    pandas >=2.0.1
    matplotlib >=3.7.1
    scipy >=1.10.1

[options.entry_points]
console_scripts =
    spectre = spectre.spectre:main

[project.urls]
Homepage = "https://github.com/fritzsedlazeck/spectre"
Issues = "https://github.com/fritzsedlazeck/spectre/issues"
